# playground

./: .gitignore  CMakeLists.txt  README.md  event.cpp  event.h  gui.cpp  gui.h  input_state.cpp  input_state.h  main.cpp  main.h  matrices.cpp  matrices.h  matrix.cpp  matrix.h  matrix4.cpp  matrix4.h  mouse_state.h  obj_loader.cpp  obj_loader.h  pub_sub.cpp  pub_sub.h  renderer.cpp  renderer.h  shaders.cpp  shaders.h  structs.cpp  structs.h  text.cpp  text.h  texture_loader.cpp  texture_loader.h  tiny_gltf.h  triangle.cpp  triangle.h  ui.cpp  ui.h  ui_box.cpp  ui_button.cpp  ui_element.cpp  (+11 more)
res/fonts/: gen_atlases.py
res/fonts/AlfaSlabOne/: atlas.json  charset.txt
res/fonts/AlumniSansCollegiateOne/: atlas.json  charset.txt
res/fonts/AnnieUseYourTelescope/: atlas.json  charset.txt
res/fonts/Annie_Use_Your_Telescope/: annie.fnt
res/fonts/BagelFatOne/: atlas.json  charset.txt
res/fonts/BakbakOne/: atlas.json  charset.txt
res/fonts/Bayon/: atlas.json  charset.txt
res/fonts/BlackOpsOne/: atlas.json  charset.txt
res/fonts/BungeeInline/: atlas.json  charset.txt
res/fonts/Bungee_Inline/: bungee.fnt
res/fonts/Chicle/: atlas.json  charset.txt
res/fonts/Coiny/: atlas.json  charset.txt  coiny.fnt
res/fonts/CormorantSC/: atlas.json  charset.txt
res/fonts/Cormorant_SC/: cormorant_regular.fnt
res/fonts/DarumadropOne/: atlas.json  charset.txt
res/fonts/Darumadrop_One/: darumadrop.fnt
res/fonts/Diplomata/: OFL.txt  atlas.json  charset.txt  diplomata.fnt
res/fonts/Dokdo/: atlas.json  charset.txt  dokdo.fnt
res/fonts/DotGothic16/: atlas.json  dotgothic.fnt
res/fonts/DukePlus/: atlas.json  charset.txt
res/fonts/FasterOne/: atlas.json  charset.txt
res/fonts/Faster_One/: fasterone.fnt
res/fonts/Foldit/: atlas.json  charset.txt  foldit_regular.fnt
res/fonts/GajrajOne/: atlas.json  charset.txt
res/fonts/GasoekOne/: atlas.json  charset.txt
res/fonts/Geo/: atlas.json  charset.txt  geo_regular.fnt
res/fonts/Geo_LowRes/: geo.fnt
res/fonts/GermaniaOne/: atlas.json  charset.txt
res/fonts/JetBrainsMono/: atlas.json  charset.txt
res/fonts/Kranky/: atlas.json  charset.txt  kranky.fnt
res/fonts/LondrinaOutline/: atlas.json  charset.txt
res/fonts/Londrina_Outline/: londarina.fnt
res/fonts/Lunchtype/: atlas.json  charset.txt
res/fonts/MajorMonoDisplay/: atlas.json  charset.txt
res/fonts/Mynerve/: atlas.json  charset.txt  mynerve.fnt
res/fonts/Nabla/: atlas.json  charset.txt  nabla_regular.fnt
res/fonts/NotoSans/: atlas.json  charset.txt
res/fonts/NotoSansJapanese/: atlas.json  charset.txt
res/fonts/PressStart2P/: atlas.json  (+1 more)
res/models/: srlandet.glb
(+31 files in other folders)
